--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background: #f8fafc;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+figure {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+.p-fileupload {
+  display: flex;
+  flex-direction: column-reverse;
+}
